--- a/public/sass/project/_layout.scss
+++ b/public/sass/project/_layout.scss
@@ -99,19 +99,22 @@
 
   // Fixes size jump that occurs on mobile devices
   // due to viewport size change when navbar shrinks
-  @media (min-device-width: 300px) and
+  @media (min-height: 0px) and (max-height: 600px) {
+    height: 700px;
+  }
+
+
+  @media (max-device-width: 700px) and
          (min-height: 300px) and
          (max-height: 499px) {
     max-height: 420px;
-    background-position: 50% 0%;
     top: 45px;
 
   }
-  @media (min-device-width: 300px) and
+  @media (max-device-width: 700px) and
          (min-height: 500px) and
          (max-height: 700px) {
     max-height: 620px;
-    background-position: 50% 0%;
     top: 45px;
   }
 }
